Correct alignment of the two cta buttons (#1003)
Due to a padding at the right the alignment of the bottom button was off. Fixed it by removing the padding.

--- a/theme/base/stylesheets/components/ctas.scss
+++ b/theme/base/stylesheets/components/ctas.scss
@@ -21,7 +21,6 @@
             > label.modal {
                 background-image: unset;
                 font-weight: 700;
-                padding-right: 0;
             }
         }
     }
